--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mebots-nodejs-example",
+  "name": "mebots-example-javascript",
   "version": "1.0.0",
   "description": "A simple GroupMe bot written in Node.js, using the Mebots API",
   "main": "index.js",
@@ -20,6 +20,10 @@
   ],
   "engine": {
     "node": "10.x"
+  },
+  "repository": {	
+    "type": "git",	
+    "url": "https://github.com/ErikBoesen/mebots-example-javascript"	
   },
   "license": "MIT"
 }
