--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "bot-tutorial",
-  "version": "0.1.2",
-  "description": "A simple GroupMe bot written in Node.js",
+  "name": "mebots-example-javascript",
+  "version": "1.0.0",
+  "description": "A simple GroupMe bot written in Node.js, using the Mebots API",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
-    "director": "",
+    "express": "^4.16.4",
+    "axios": "^0.19.0",
     "mebots": "^1.1.0"
-  },
-  "engines": {
-    "node": "0.10.x"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/groupme/bot-tutorial-nodejs"
   },
   "keywords": [
     "node",
-    "heroku",
+    "mebots",
     "express",
     "groupme",
     "bot"
   ],
+  "engine": {
+    "node": "10.x"
+  },
+  "repository": {	
+    "type": "git",	
+    "url": "https://github.com/ErikBoesen/mebots-example-javascript"	
+  },
   "license": "MIT"
 }
